# MiDaS_Android

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/tensorflow/lite/: CMakeLists.txt
app/src/main/cpp/tensorflow/lite/examples/minimal/: CMakeLists.txt  minimal.cc
app/src/main/java/com/example/midaslite/: ImageLoader.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle
